--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "ethers": "^5.6.5",
+    "iron-session": "^6.1.3",
     "jotai": "^1.6.5",
     "next": "latest",
     "pubnub": "^5.0.1",
     "pubnub-react": "^2.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "uuid": "^8.3.2"
+    "siwe": "^1.1.6",
+    "uuid": "^8.3.2",
+    "wagmi": "^0.3.4"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
