--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.2",
+    "daisyui": "^2.14.3",
     "ethers": "^5.6.5",
     "iron-session": "^6.1.3",
     "jotai": "^1.6.5",
@@ -16,18 +18,17 @@
     "react-dom": "^17.0.2",
     "siwe": "^1.1.6",
     "uuid": "^8.3.2",
-    "wagmi": "^0.3.4"
+    "wagmi": "^0.3.4",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.7"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/pubnub": "^4.29.7",
     "@types/react": "17.0.38",
     "@types/uuid": "^8.3.4",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
-    "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
   }
 }
