--- a/package.json
+++ b/package.json
@@ -6,21 +6,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "@pubnub/react-chat-components": "^0.9.0",
     "autoprefixer": "^10.4.2",
     "daisyui": "^2.14.3",
     "ethers": "^5.6.5",
     "iron-session": "^6.1.3",
     "jotai": "^1.6.5",
     "next": "latest",
+    "next-transpile-modules": "^9.0.0",
+    "postcss": "^8.4.5",
     "pubnub": "^5.0.1",
     "pubnub-react": "^2.1.1",
     "react": "^17.0.2",
+    "react-daisyui": "^2.0.1",
     "react-dom": "^17.0.2",
     "siwe": "^1.1.6",
+    "tailwindcss": "^3.0.7",
     "uuid": "^8.3.2",
-    "wagmi": "^0.3.4",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.7"
+    "wagmi": "^0.3.4"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
