--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-daisyui": "^2.0.1",
     "react-dom": "^17.0.2",
     "siwe": "^1.1.6",
+    "socket.io-client": "^4.5.0",
     "tailwindcss": "^3.0.7",
     "uuid": "^8.3.2",
     "wagmi": "^0.3.4"
