feat: start commands

--- a/turbo.json
+++ b/turbo.json
@@ -12,6 +12,9 @@
     "dev": {
       "dependsOn": ["^dev"],
       "cache": false
+    },
+    "start": {
+      "dependsOn": ["^build"]
     }
   }
 }
