--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://turborepo.org/schema.json",
   "baseBranch": "origin/main",
+  "globalDependencies": [".env.local"],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
