--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -7,22 +7,31 @@
     "build": "next build",
     "start": "next start"
   },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "@babel/core@"
+      ]
+    }
+  },
   "dependencies": {
     "autoprefixer": "^10.4.2",
     "daisyui": "^2.14.3",
     "ethers": "^5.6.5",
     "iron-session": "^6.1.3",
     "jotai": "^1.6.5",
+    "ky": "^0.30.0",
     "next": "latest",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-daisyui": "^2.0.1",
     "react-dom": "^17.0.2",
+    "react-query": "^3.39.0",
     "siwe": "^1.1.6",
     "socket.io-client": "^4.5.0",
     "tailwindcss": "^3.0.7",
     "uuid": "^8.3.2",
-    "wagmi": "^0.3.4"
+    "wagmi": "0.3.4"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
@@ -32,7 +41,7 @@
     "next-transpile-modules": "^9.0.0",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
-    "typescript": "4.5.4",
-    "tsconfig": "workspace:*"
+    "tsconfig": "workspace:*",
+    "typescript": "4.5.4"
   }
 }
