--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -30,7 +30,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "socket.io": "^4.5.0"
+    "socket.io": "^4.5.0",
+    "source-map-support": "^0.5.20"
   },
   "devDependencies": {
     "@nestjs/schematics": "^8.0.0",
@@ -47,7 +48,6 @@
     "jest": "28.0.3",
     "prettier": "^2.3.2",
     "run-script-webpack-plugin": "^0.0.12",
-    "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.1",
     "ts-loader": "^9.2.3",
