--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.2",
+    "classnames": "^2.3.1",
     "daisyui": "^2.14.3",
     "ethers": "^5.6.5",
     "iron-session": "^6.1.3",
