build: update configs

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "turbo": "latest"
   },
   "devDependencies": {
-    "prettier": "latest"
+    "prettier": "latest",
+    "eslint-config-custom": "workspace:*"
   },
   "prettier": {
     "semi": false,
