--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -23,6 +23,7 @@
     "jotai": "^1.6.5",
     "ky": "^0.30.0",
     "next": "latest",
+    "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-daisyui": "^2.0.1",
@@ -39,7 +40,7 @@
     "@types/pubnub": "^4.29.7",
     "@types/react": "17.0.38",
     "@types/uuid": "^8.3.4",
-    "next-transpile-modules": "^9.0.0",
+    "eslint-config-custom": "workspace:*",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
     "tsconfig": "workspace:*",
