--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -15,9 +15,10 @@
     }
   },
   "dependencies": {
+    "@types/react": "17.0.38",
     "autoprefixer": "^10.4.2",
     "classnames": "^2.3.1",
-    "daisyui": "^2.14.3",
+    "daisyui": "^2.15.2",
     "ethers": "^5.6.5",
     "iron-session": "^6.1.3",
     "jotai": "^1.6.5",
@@ -32,13 +33,12 @@
     "siwe": "^1.1.6",
     "socket.io-client": "^4.5.0",
     "tailwindcss": "^3.0.7",
+    "tsconfig": "workspace:*",
     "uuid": "^8.3.2",
     "wagmi": "0.3.4"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
-    "@types/pubnub": "^4.29.7",
-    "@types/react": "17.0.38",
     "@types/uuid": "^8.3.4",
     "eslint-config-custom": "workspace:*",
     "prettier": "^2.5.1",
