--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,13 +1,13 @@
 {
   "name": "server",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "prepare": "npx prisma generate",
+    "generate": "pnpm prisma generate",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -22,43 +22,43 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/cli": "^8.2.5",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/platform-socket.io": "^8.4.4",
-    "@nestjs/websockets": "^8.4.4",
+    "@nestjs/cli": "^8.2.6",
+    "@nestjs/common": "^8.4.6",
+    "@nestjs/core": "^8.4.6",
+    "@nestjs/platform-express": "^8.4.6",
+    "@nestjs/platform-socket.io": "^8.4.6",
+    "@nestjs/websockets": "^8.4.6",
     "@prisma/client": "3.14.0",
+    "prisma": "^3.14.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "socket.io": "^4.5.0",
-    "source-map-support": "^0.5.20",
+    "rxjs": "^7.5.5",
+    "socket.io": "^4.5.1",
+    "source-map-support": "^0.5.21",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/schematics": "^8.0.11",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/testing": "^8.4.6",
     "@types/express": "^4.17.13",
-    "@types/jest": "27.5.0",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
+    "@types/jest": "27.5.1",
+    "@types/node": "^17.0.36",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.0.3",
-    "prettier": "^2.3.2",
-    "prisma": "^3.14.0",
-    "run-script-webpack-plugin": "^0.0.12",
-    "supertest": "^6.1.3",
-    "ts-jest": "28.0.1",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "jest": "28.1.0",
+    "prettier": "^2.6.2",
+    "run-script-webpack-plugin": "^0.0.14",
+    "supertest": "^6.2.3",
+    "ts-jest": "28.0.3",
+    "ts-loader": "^9.3.0",
+    "ts-node": "^10.8.0",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5",
+    "typescript": "^4.7.2",
     "webpack": "^5.72.1",
     "webpack-node-externals": "^3.0.0"
   },
