--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,9 @@
     "lint": {
       "outputs": []
     },
+    "generate": {
+      "dependsOn": ["^generate"]
+    },
     "dev": {
       "dependsOn": ["^dev"],
       "cache": false
