--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -63,6 +63,9 @@
     "webpack-node-externals": "^3.0.0"
   },
   "jest": {
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
+    },
     "moduleFileExtensions": [
       "js",
       "json",
